--- a/styles.css
+++ b/styles.css
@@ -650,12 +650,8 @@ header img {
 
 /* Mobile Responsiveness */
 @media(max-width: 768px) {
-    * {
+    body {
         overflow-x: hidden;
-    }
-
-    .bx-menu {
-
     }
 
     .mob-space {
@@ -670,12 +666,12 @@ header img {
 
     
     .nav-link1, .end-nav {
-        display: none;;
+        display: none;
     }
 
     .menu-open {
         display: flex;
-        margin-right: 100px;
+        margin-right: 25px;
     }
 
     .menu-open:hover {
