--- a/styles.css
+++ b/styles.css
@@ -627,31 +627,32 @@ header img {
     right: 0;
     width: 100%;
     border-radius: 24px;
+}
 
-    nav {
-        display: flex;
+    .mobile-menu nav {
+        display: none;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         margin-bottom: 45px;
-        gap: 24px;
+        gap: 4px;
     }
 
-    a {
+    .mobile-menu a {
         font-size: 1.2rem;
     }
-}
 
 .menu-close, .menu-open {
     display: none;
     font-size: 32px;
     color: white;
+    margin-left: 1px;
 }
 
 /* Mobile Responsiveness */
 @media(max-width: 768px) {
-    body {
-       overflow: hidden;
+    html {
+       overflow:-moz-hidden-unscrollable;
     }
 
     .mob-space {
