--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 body {
     background-color: wheat;
     font-family: sans-serif;
+    overflow-x: hidden;
 }
 
 .content-blur {
@@ -293,20 +294,19 @@ header img {
     text-align: center;
     color: whitesmoke;
     line-height: 30px;
+ }
 
-     h4 {
+ .how-section h4 {
     font-size: 1.3rem;
     color: wheat;
     line-height: 20px;
     padding-top: 30px;
  }
 
-    p {
+ .how-section p {
     font-size: 1.5rem;
     padding-bottom: 50px;
  
-}
-
 }
 
  .how-content {
@@ -316,26 +316,25 @@ header img {
     justify-content: center;
     text-align: center;
     gap: 30px;
+ }
 
-    img {
+.how-content img {
     width: 200px;
     height: auto;
     border-radius: 100%;
     aspect-ratio: 1/1;
  }
 
-}
-
  .how-it-works {
     border: 1px solid whitesmoke;
     border-radius: 50px;
     padding: 20px;
     width: 500px;
+ }
 
-    p {
+.how-it-works p {
         padding-bottom: 15px;
     }
- }
 
  .how-link {
     font-size: 1.2rem;
@@ -343,8 +342,9 @@ header img {
     justify-content: center;
     align-items: center;
     text-align: center;
+ }
 
-     a {
+.how-link a {
         margin: 30px;
         text-decoration: none;
         color: wheat;
@@ -355,29 +355,28 @@ header img {
         transition: all .3s ease-in-out;
     }
 
-    a:hover {
+.how-link a:hover {
         background-color: blanchedalmond;
         color: black;
     }
- }
 
- .testimonial-section {
+.testimonial-section {
     margin: 50px;
     text-align: center;
     align-items: center;
     justify-content: center;
     line-height: 20px;
+}
 
-    h3 {
+.testimonial-section h3 {
         color: brown;
         font-size: 1.3rem;
     }
 
-    p {
+.testimonial-section p {
         font-size: 1rem;
         font-weight: 500;
     }
- }
 
  .bold-font {
     font-weight: 600;
@@ -386,16 +385,16 @@ header img {
  .testi-flex {
     display: flex;
     gap: 60px;
+ }
 
 
-    img {
+.testi-flex img {
         width: 100px;
         aspect-ratio: 1/1;
         align-self: flex-start;
         margin: 20px;
         filter: brightness(100%) grayscale(100%);
     }
- }
 
 
  .bxs-star {
@@ -413,17 +412,17 @@ header img {
     margin-top: 60px;
     margin-bottom: 100px;
     line-height: 40px;
+ }
     
 
-    h2 {
+.star-strip h2 {
         font-size: 2.5rem;
         color: rgb(26, 24, 24);
     }
 
-    p {
+.star-strip p {
         font-size: 1.3rem;
     }
- }
 
  .separator-line {
     width: 100%;
@@ -452,21 +451,21 @@ header img {
     justify-content: center;
     align-items: center;
     margin-bottom: 50px;
+ }
 
-    h3 {
+.faq-header h3 {
         font-size: 1.2rem;
         font-weight: 600;
         color: brown;
         margin-bottom: 10px;
     }
 
-    p {
+.faq-header p {
         font-size: 1.5rem;
         font-weight: 700;
         color: rgb(39, 35, 35);
         opacity: .8;
     }
- }
 
   .bx-plus {
          font-size: 1.3rem;
@@ -481,18 +480,18 @@ header img {
 
  .accordion-item {
     padding: 0 100px;
+ }
 
-    h3 {
+.accordion-item h3 {
         font-size: 1.3rem;
         font-weight: 700;
     }
 
-    p {
+.accordion-item p {
         display: none;
         line-height: 40px;
     
     }
- }
 
  .accordion-header {
     display: flex;
@@ -515,17 +514,17 @@ header img {
     align-items: center;
     text-align: center;
     margin: 0 auto;
+ }
 
-    h2 {
+.cta-section h2 {
         font-size: 3rem;
         padding-bottom: 30px;
     }
 
-    p {
+.cta-section p {
          padding-bottom: 30px;
          font-size: 1.5rem;
     }
- }
 
 .cta-form {
     position: relative;
@@ -568,31 +567,32 @@ header img {
     margin-top: 150px;
     margin-bottom: 50px;
     line-height: 40px;
+}
 
 
-    img {
+.foot-section img {
         width: 100px;
         height: auto;
         filter: brightness(30%) grayscale(100%);
     }
 
-    p {
+.foot-section p {
         font-size: 1.2rem;
         font-weight: 400;
     }
-}
 
 .foot-flex {
     display: flex;
     justify-content: space-evenly;
     margin: 50px;
+}
 
-    h3 {
+.foot-flex  h3 {
         font-size: 1.4rem;
         color: rgb(44, 37, 37);
     }
 
-    a {
+.foot-flex a {
         text-decoration: none;
         font-size: 1rem;
         color: black;
@@ -600,11 +600,10 @@ header img {
         transition: all .3s ease-in-out;
     }
 
-    a:hover {
+.foot-flex  a:hover {
         text-decoration: underline;
         color: brown;
     }
-}
 
 .foot {
     display: flex;
@@ -629,7 +628,7 @@ header img {
     border-radius: 24px;
 }
 
-    .mobile-menu nav {
+.mobile-menu nav {
         display: none;
         flex-direction: column;
         align-items: center;
@@ -638,13 +637,13 @@ header img {
         gap: 4px;
     }
 
-    .mobile-menu a {
+.mobile-menu a {
         font-size: 1.2rem;
     }
 
 .menu-close, .menu-open {
     display: none;
-    font-size: 32px;
+    font-size: 50px;
     color: white;
     margin-left: 1px;
 }
@@ -654,7 +653,7 @@ header img {
 
     .mob-space {
         margin-top: 50px;
-        max-width: 400px;
+        /* max-width: 400px; */
     }
 
     .image {
@@ -669,7 +668,7 @@ header img {
 
     .menu-open {
         display: flex;
-        max-width: 300px;
+        /* max-width: 300px; */
         margin-right: 10px;
     }
 
@@ -699,7 +698,7 @@ header img {
     }
 
     .notify {
-        left: 220px;
+        left: 320px;
     }
 
     .feat-heading p {
@@ -797,15 +796,31 @@ header img {
   }
 
   .cta-form {
-    transform: translate(-100px);
-    left: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    transform: translate(-220px);
+    left: 180px;
+  }
+
+  .form-button {
+    margin-top: 70px;
+    width: 320px;
+    left: 140px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
+    font-weight: 700;
   }
 
   .mobile-check {
     font-size: 1rem;
     max-width: 320px;
     line-height: 30px;
-    padding-top: 12px;
+    padding-top: 80px;
   }
 
   .form-button {
